@@ -155,6 +155,13 @@ build/AddIns/AddIns/Misc/StartPage/Makefile
 data/Makefile
 data/resources/Makefile
 data/resources/glade/Makefile
+src/AddIns/DisplayBindings/SourceEditor/AssemblyInfo.cs
+src/AddIns/Misc/StartPage/AssemblyInfo.cs
+src/Main/StartUp/AssemblyInfo.cs
+src/Main/Base/AssemblyInfo.cs
+src/Libraries/MonoDevelop.Gui.Widgets/AssemblyInfo.cs
+src/Libraries/MonoDevelop.Gui.Utils/AssemblyInfo.cs
+src/Libraries/MonoDevelop.Core/AssemblyInfo.cs
 monodevelop
 ])
 
