@@ -4,19 +4,20 @@
 //     <owner name="Mike Krger" email="mike@icsharpcode.net"/>
 //     <version value="$version"/>
 // </file>
+
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly: AssemblyTitle("MonoDevelopBase")]
-[assembly: AssemblyDescription("The base add-in of MonoDevelop")]
+[assembly: AssemblyTitle("MonoDevelop.Core")]
+[assembly: AssemblyDescription("The MonoDevelop Core containing the AddInTree and service Subsystem")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("MonoDevelop")]
+[assembly: AssemblyProduct("MonoDevelop.Core")]
 [assembly: AssemblyCopyright("Mike Krueger 2000-2003")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
-[assembly: AssemblyVersion("0.2.0.0")]
+[assembly: AssemblyVersion("@VERSION@.0.0")]
 
 [assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("")] // ..\\src\\SharpDevelop\\sharpdevelop.key
+//[assembly: AssemblyKeyFile("..\\src\\Main\\Core\\CoreKey.key")]
