@@ -1,13 +1,13 @@
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly: AssemblyTitle("MonoDevelop.Gui.Utils")]
-[assembly: AssemblyDescription("MonoDevelop GUI utility library")]
+[assembly: AssemblyTitle("MonoDevelop.Gui.Widgets")]
+[assembly: AssemblyDescription("MonoDevelop GUI widgets")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyProduct("MonoDevelop.Gui.Utils")]
+[assembly: AssemblyProduct("MonoDevelop.Gui.Widgets")]
 [assembly: AssemblyCopyright("")]
 [assembly: AssemblyCulture("")]
-[assembly: AssemblyVersion("0.2.0.0")]
+[assembly: AssemblyVersion("@VERSION@.0.0")]
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyFile("")]
 [assembly: AssemblyKeyName("")]
