@@ -4,20 +4,19 @@
 //     <owner name="Mike Krger" email="mike@icsharpcode.net"/>
 //     <version value="$version"/>
 // </file>
-
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly: AssemblyTitle("MonoDevelop")]
-[assembly: AssemblyDescription("free C# IDE")]
+[assembly: AssemblyTitle("MonoDevelopBase")]
+[assembly: AssemblyDescription("The base add-in of MonoDevelop")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
 [assembly: AssemblyProduct("MonoDevelop")]
-[assembly: AssemblyCopyright("Mike Krueger 2000")]
+[assembly: AssemblyCopyright("Mike Krueger 2000-2003")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
-[assembly: AssemblyVersion("0.2.0.0")]
+[assembly: AssemblyVersion("@VERSION@.0.0")]
 
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyFile("")] // ..\\src\\SharpDevelop\\sharpdevelop.key
