@@ -15,12 +15,10 @@ using System.ComponentModel;
 using System.Diagnostics;
 
 using MonoDevelop.Core.AddIns;
-
 using MonoDevelop.Core.Properties;
 using MonoDevelop.Core.AddIns.Codons;
 using MonoDevelop.Core.Services;
 using MonoDevelop.Services;
-
 using MonoDevelop.Gui;
 using MonoDevelop.Gui.Components;
 using MonoDevelop.Internal.Project;
@@ -71,6 +69,5 @@ namespace MonoDevelop.Commands.ProjectBrowser
 			}
 		}
 	}
-		
-	
 }
+
