@@ -1,4 +1,4 @@
-2004-04-22  John Luke  <jluke@cfl.rr.com>
+2004-03-22  John Luke  <jluke@cfl.rr.com>
 
 	* Makefile.am: move FILES and EXTRA_DIST outside of if block
 
