@@ -1,3 +1,9 @@
+2003-03-21  John Luke  <jluke@cfl.rr.com>
+
+	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
+	set the default of the FileSelector to ~/MonoDevelopProjects
+	closes bug #55188
+
 2004-03-21  Todd Berman  <tberman@sevenl.net>
 
 	* Commands/FileCommands: fix bug #55869.
